fixed z-index of lightbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -276,12 +276,14 @@ body {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
+    z-index: 10;
 }
 
 .lightbox {
     position: fixed;
     top: 50%;
     left: 50%;
+    z-index: 11;
     transform: translate(-50%, -50%);
 }
 
